V7.0: (Under development)
  * Fixed issue #734: DefaultText property ignored
  * Fixed issue #724: Error when reading "old" streams
  * Fixed issue #397: Horizontal autoscroll on focus does not properly scroll node into view if column width is larger than client width  
  * Fixed issue #727: Header not repainted after loading from stream
  * Fixed issue #726: Incorrect header hot painting
  * Fixed issue #722: Simplify custom header drawing while keeping default drawing
  * Fixed issue #467: Multi level checkboxes and BeginUpdate/EndUpdate issue
  * Fixed issue #391: Change property HotNode: Add a setter 
  * Removed flag toDisableAutoscrollOnFocus from default configuration of a new Virtual TreeView to achieve a more common behavior with default properties.

V6.7: (29 May 2017)
  * Fixed issue #714: Integer overflow in TBaseVirtualTree's InternalAddFromStream
  * Fixed issue #500: Issue with node selection "from code" for disabled nodes with toLevelSelectConstraint option  
  * Fixed issue #499: Incorrect behavior with toLevelSelectConstraint and ctrl+A 
  * Fixed issue #649: Cell navigation problems with toAutoSpanColumns for left and right keys
  * Fixed issue #712: Strange behaviour of AutoFitColumns
  * Fixed issue #718: Shift + Right-Click should not extend selection
  * Fixed issue #706: Integer overflow in DetermineScrollDirections when timeGetTime wraps
  * Fixed issue #407: TVirtualDrawTree.InvalidateNode does not clear vsHeightMeasured
  * Enhancement #669: Create sample project for C++ Builder
  * Enhancement #708: New option toSyncCheckboxesWithSelection improves multi-selection for touch UI that synchonizes selection and check-state  
  * Fixed issue #717: The option toUseExplorerTheme does not draw lines in place of buttons removed by toAutoHideButtons
  * Fixed issue #716: Tab key navigation does not work properly with Auto Span Columns