@@ -1,4 +1,5 @@
 V7.0: (Under development)
+  * Enhancement #735: Add event that is fired when a check state is needed
   * Fixed issue #734: DefaultText property ignored
   * Fixed issue #724: Error when reading "old" streams
   * Fixed issue #397: Horizontal autoscroll on focus does not properly scroll node into view if column width is larger than client width  
